@@ -21,6 +21,7 @@ John Lehman - j1o1h1n@gmail.com
 Jürgen Kartnaller - <kartnaller@lovelysystems.com>
 G Clinch
 Kees Boss
+Oisin Mulvihill
 Laszlo Krekacs - khiraly@gmail.com
 
 Erik gets a special mention for the contribution of the "Showcase".
